[package]
name = "Clock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7"}
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
heapless = "0.8.0"
hub75 = "0.1.1"
panic-halt = "1.0.0"
rp-pico = "0.9.0"
log="*"
rp2040-hal = {version="0.10.2",features = [ "defmt" ] }
rp2040-boot2 = "0.3.0"
pio-proc = "*"
pio = "*"
rtt-target = "0.5.0"


fugit = "0.3.7"