[package]
name = "Clock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7"}
cortex-m-rt = "0.7.5"
# embedded-hal = "1.0.0"
# ds323x = "*"
# heapless = "0.8.0"
# # hub75 = "0.1.1"
panic-halt = "1.0.0"
# rp-pico = "0.9.0"
# log="0.4.26"
# rp2040-hal = {version="0.10.2",features = [ "defmt" ] }
# rp2040-boot2 = "0.3.0"
# pio-proc = "0.3.0"
# pio = "0.3.0"
# rtt-target = "0.6.1"
# rp2040-pac = "0.6.0"

# fugit = "0.3.7"
defmt = {version = "0.3", optional = false}
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.2.0"
embassy-rp ={version =  "0.4.0",features = ["rp2040","critical-section-impl","defmt","time-driver"]}
embassy-embedded-hal = {version = "0.3.0",features = ["defmt"]}
# embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-executor = { version = "0.7.0",features = [ "arch-cortex-m", "executor-thread"]}
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

