[package]
name = "Clock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7"}
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
ds323x = "*"
heapless = "0.8.0"
# hub75 = "0.1.1"
panic-halt = "1.0.0"
rp-pico = "0.9.0"
log="0.4.26"
rp2040-hal = {version="0.10.2",features = [ "defmt" ] }
rp2040-boot2 = "0.3.0"
pio-proc = "0.3.0"
pio = "0.3.0"
rtt-target = "0.6.1"
rp2040-pac = "0.6.0"

fugit = "0.3.7"

# [[bin]]
# name="patterngenerator"
# path = "patterngenerator/src/main.rs"